feat(Pedido): começado a criar uma pesquisa dinamica para os pedidos.

--- a/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Index.cshtml
+++ b/src/modulo-05-dotnet/exercicios/LojaNinja/LojaNinja/Views/Pedido/Index.cshtml
@@ -13,7 +13,7 @@
     <h1>@ViewBag.Title</h1>
 </div>
 
-@using(Html.BeginForm("Index", "Pedido", FormMethod.Get, new { @class = "well" })) { 
+@using(Html.BeginForm("Index", "Pedido", FormMethod.Get, new { @class = "well", busca_pedidos = "" })) { 
     <div class="row">
         <div class="col-sm-10">
             <div class="input-group">
@@ -31,73 +31,81 @@
 
 <!-- Table -->
 <table class="table table-bordered table-hover tabela-de-pedidos">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.NomeProduto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ValorVenda)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataEntrega)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataPedido)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NomeCliente)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cidade)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Estado)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Urgente)
-        </th>
-        <th class="acoes"></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
+    <thead>
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NomeProduto)
-            </td>
-            <td>
-                @string.Format("{0:c}", item.ValorVenda)
-            </td>
-            <td>
-                @item.DataEntrega.ToShortDateString()
-            </td>
-            <td>
-                @item.DataPedido.ToShortDateString()
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NomeCliente)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cidade)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td class="urgente">
-                <i class="glyphicon @(item.Urgente ? "glyphicon-thumbs-up" : "glyphicon-thumbs-down")"></i>
-            </td>
-            <td>
-                <a href="@Url.Action("Deletar", new {id = item.Id})" class="btn btn-default btn-xs">
-                    <i class="glyphicon glyphicon-remove"></i> Deletar
-                </a> |
-                <a href="@Url.Action("Salvar", new {id = item.Id})" class="btn btn-default btn-xs">
-                    <i class="glyphicon glyphicon-pencil"></i> Editar
-                </a> |
-                <a href="@Url.Action("Detalhes", new {id = item.Id})" class="btn btn-default btn-xs">
-                    <i class="glyphicon glyphicon-search"></i> Detalhes
-                </a>
-            </td>
+            <th>
+                @Html.DisplayNameFor(model => model.NomeProduto)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ValorVenda)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataEntrega)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DataPedido)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.NomeCliente)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cidade)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Estado)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Urgente)
+            </th>
+            <th class="acoes"></th>
         </tr>
-    }
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr data-pedido-id="@item.Id">
+                <td>
+                    @Html.DisplayFor(modelItem => item.NomeProduto)
+                </td>
+                <td>
+                    @string.Format("{0:c}", item.ValorVenda)
+                </td>
+                <td>
+                    @item.DataEntrega.ToShortDateString()
+                </td>
+                <td>
+                    @item.DataPedido.ToShortDateString()
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NomeCliente)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cidade)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Estado)
+                </td>
+                <td class="urgente">
+                    <i class="glyphicon @(item.Urgente ? "glyphicon-thumbs-up" : "glyphicon-thumbs-down")"></i>
+                </td>
+                <td>
+                    <a href="@Url.Action("Deletar", new {id = item.Id})" class="btn btn-default btn-xs">
+                        <i class="glyphicon glyphicon-remove"></i> Deletar
+                    </a> |
+                    <a href="@Url.Action("Salvar", new {id = item.Id})" class="btn btn-default btn-xs">
+                        <i class="glyphicon glyphicon-pencil"></i> Editar
+                    </a> |
+                    <a href="@Url.Action("Detalhes", new {id = item.Id})" class="btn btn-default btn-xs">
+                        <i class="glyphicon glyphicon-search"></i> Detalhes
+                    </a>
+                </td>
+            </tr>
+        }
+    </tbody>
 
 </table>
+
+@section Scripts {
+    <script src="~/scripts/Site/pedido.js"></script>
+}
