--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -4,17 +4,23 @@
     }
 </style>
 
-<h3>Listagem de cavaleiros</h3>
+<div class="container">
+    <div class="page-header">
+        <h1>Lista de cavaleiros</h1>
+    </div>
 
-<ul id="cavaleiros"></ul>
-<div id="feedback"></div>
-<button id="btnCriar">Criar hard-coded!</button>  
+</div>
 
-<script>
+    <ul id="cavaleiros"></ul>
+    <div id="feedback"></div>
+    <button id="btnCriar">Criar hard-coded!</button>
+
+    <script>
     var urlCavaleiroGet = '@Url.Action("Get")';
     var urlCavaleiroPost = '@Url.Action("Post")';
-</script>
+    </script>
 
-@section scripts {
-    <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
-}
+    @section scripts {
+        <script src="~/Scripts/Services/ServicoDeCavaleiros.js"></script>
+        <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
+    }
