--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Shared/_Layout.cshtml
@@ -10,47 +10,38 @@
     <meta name="viewport" content="width=device-width" />
     <meta charset="utf-8" />
     <title>@ViewBag.Title</title>
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/Custom/principal.css" rel="stylesheet" />
-    <script src="~/Scripts/jquery-2.2.3.min.js"></script>
-    <script src="~/Scripts/jquery.validate.min.js"></script>
-    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <div id="spinner" style="display: none; position: fixed; width:100%; height:100%; background: rgba(0,0,0,.5) url(http://i.imgur.com/Q3obLBL.gif) center center no-repeat;"></div>
-    @if (ServicoDeSessao.EstaLogado)
-    {
-        <header>
-            <div class="container-fluid">
-                <div class="pull-right">
-                    Bem Vinda(o) <b>@ServicoDeSessao.UsuarioLogado.Nome</b> (<a href="/Login/Loggout">Sair</a>)
-                </div>
-            </div>
-        </header>
-    }
-    
 
-    <h1 class="site-title">Dakishimeta kokoro no kosumo</h1>
+    <div class="navbar navbar-default navbar-static-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                @Html.ActionLink("CdZ", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="@Url.Action("Index", "Cavaleiro")">Cavaleiros</a></li>
+                </ul>
+                @Html.Partial("_UserLoginPartial")
+            </div>
+        </div>
+    </div>
+
     <div class="container"> 
         @RenderBody()
     </div>
-    <script>
-        $(document)
-            .ajaxSend(function () {
-                $('#spinner').show();
-            })
-            .ajaxComplete(function () {
-                $('#spinner').hide();
-            })
-            .ajaxError(function () {
-                console.log('Tratador de erros genérico.', arguments);
-            });
-
-        $.ajaxSetup({
-            timeout: 2000
-        });
-
-    </script>
-    @RenderSection("scripts", false)   
+    <script src="~/Scripts/jquery-2.2.3.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script src="~/Scripts/Custom/Initial.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
