feat(Notificação): criado servico de notificação.

--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Shared/_Layout.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using CdZ.MVC.Services
-@{
+﻿@{
     Layout = null;
 }
 
@@ -12,6 +11,7 @@
     <title>@ViewBag.Title</title>
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/Site/default.css" rel="stylesheet" />
 </head>
 <body>
     <div id="spinner" style="display: none; position: fixed; width:100%; height:100%; background: rgba(0,0,0,.5) url(http://i.imgur.com/Q3obLBL.gif) center center no-repeat;"></div>
@@ -42,6 +42,8 @@
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/Scripts/Custom/Initial.js"></script>
+    <script src="~/Scripts/Services/ServicoDeMensagem.js"></script>
+    <script src="~/Scripts/Services/ServicoDeNotificacao.js"></script>
     @RenderSection("scripts", false)
 </body>
 </html>
