--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -1,15 +1,12 @@
-﻿<style>
-    .erro {
-        color: red;
-    }
-</style>
+﻿@{
+    ViewBag.Title = "Lista de Cavaleiros";
+}
 
 <div class="container">
     <div class="page-header">
-        <h1>Lista de cavaleiros</h1>
         <button class="btn btn-primary btn-lg pull-right" id="btnCriarAleatorio">Criar hard-coded!</button>
         <button class="btn btn-primary btn-lg pull-right" id="btnCriar">Criar</button>
-        <div class="clearfix"></div>
+        <h1>Lista de cavaleiros</h1>
     </div>
 </div>
 
@@ -20,7 +17,6 @@
 
 @section scripts {
     <script src="~/Scripts/Models/Cavaleiro.js"></script>
-    <script src="~/Scripts/Services/ServicoDeMensagem.js"></script>
     <script src="~/Scripts/Services/ServicoDeCavaleiros.js"></script>
     <script src="~/Scripts/Controllers/CavaleiroController.js"></script>
     <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
