--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Content/Site/default.css
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Content/Site/default.css
@@ -4,3 +4,17 @@
     .page-header > .btn.btn-primary.btn-lg.pull-right {
         margin-left: 10px;
     }
+
+#spinner {
+    position: relative;
+    display: none;
+    position: fixed; 
+    width:100%; 
+    height:100%; 
+    z-index: 1000;
+    background: rgba(0,0,0,.5) url(http://i.imgur.com/Q3obLBL.gif) center center no-repeat;
+}
+
+    #spinner.active {
+        display: block;
+    }
