--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -23,6 +23,7 @@
                 </div>
                 <div class="modal-body">
                     <form form-cavaleiro>
+                        <input type="hidden" name="id" id="id"/>
                         <div class="form-group">
                             <label for="nome">Nome:</label>
                             <input type="text" class="form-control" name="nome" id="nome" required>
@@ -31,10 +32,10 @@
                             <label for="tipoSanguineo">Tipo sanguíneo:</label>
                             <select class="form-control" name="tipoSanguineo" id="tipoSanguineo" required>
                                 <option>Selecione</option>
-                                <option value="A">A</option>
-                                <option value="B">B</option>
-                                <option value="AB">AB</option>
-                                <option value="O">O</option>
+                                <option value="1">A</option>
+                                <option value="2">B</option>
+                                <option value="3">AB</option>
+                                <option value="4">O</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -53,18 +54,18 @@
                             <label for="signo">Signo:</label>
                             <select class="form-control" name="signo" id="signo" required>
                                 <option>Selecione</option>
-                                <option value="Áries">Áries</option>
-                                <option value="Touro">Touro</option>
-                                <option value="Gêmeos">Gêmeos</option>
-                                <option value="Câncer">Câncer</option>
-                                <option value="Leão">Leão</option>
-                                <option value="Virgem">Virgem</option>
-                                <option value="Libra">Libra</option>
-                                <option value="Escorpião">Escorpião</option>
-                                <option value="Sagitário">Sagitário</option>
-                                <option value="Capricórnio">Capricórnio</option>
-                                <option value="Aquário">Aquário</option>
-                                <option value="Peixes">Peixes</option>
+                                <option value="1">Áries</option>
+                                <option value="2">Touro</option>
+                                <option value="3">Gêmeos</option>
+                                <option value="4">Câncer</option>
+                                <option value="5">Leão</option>
+                                <option value="6">Virgem</option>
+                                <option value="7">Libra</option>
+                                <option value="8">Escorpião</option>
+                                <option value="9">Sagitário</option>
+                                <option value="10">Capricórnio</option>
+                                <option value="11">Aquário</option>
+                                <option value="12">Peixes</option>
                             </select>
                         </div>
                         <div class="form-group">
