--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Content/Site/Cavaleiro/Index.css
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Content/Site/Cavaleiro/Index.css
@@ -5,19 +5,7 @@
         position: relative;
     }
     
-        .cavaleiro > a {
-            position: absolute;
-            left: 25px;
-            top: 15px;
-            color: #EA3835;
-            text-decoration: none;
-        }
-    
-        .cavaleiro > img {
-            max-width: 100%;
-            max-height: 100%;
-        }
-        
-        .cavaleiro:nth-child(6n+1) {
-            clear: both;
+        .cavaleiro img {
+            width: 200px;
+            height: 200px;
         }
