feat(Cavaleiros): comecado a paginação nos cavaleiros.

--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -146,6 +146,7 @@
     <script src="~/Scripts/Models/Imagem.js"></script>
     <script src="~/Scripts/Models/Local.js"></script>
     <script src="~/Scripts/Services/ServicoDeCavaleiros.js"></script>
+    <script src="~/Scripts/Services/ServicoDePaginacao.js"></script>
     <script src="~/Scripts/Controllers/CavaleiroController.js"></script>
     <script src="~/Scripts/Views/Cavaleiro/Index.js"></script>
 }
