feat(Cavaleiro): terminado paginação.

--- a/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
+++ b/src/modulo-06-ajax/exercicios/CdZ/src/CdZ.MVC/Views/Cavaleiro/Index.cshtml
@@ -36,13 +36,13 @@
 
     <nav paginacao>
         <ul class="pagination">
-            <li paginacao-anterior>
-                <a href="#" aria-label="Previous">
+            <li data-pagina-index="anterior" paginacao-anterior>
+                <a href aria-label="Anterior">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
-            <li paginacao-proximo>
-                <a href="#" aria-label="Next">
+            <li data-pagina-index="proxima" paginacao-proxima>
+                <a href aria-label="Proxima">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
