--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/src/main/webapp/resources/css/site/default.css
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe06/crescer-web/src/main/webapp/resources/css/site/default.css
@@ -14,9 +14,89 @@ body {
 
 .navbar {
     border-radius: 0;
+    background-color: #fff;
+    box-shadow: 0px 5px 15px 0px rgba(170,170,170,0.75);
 }
 
-    .navbar-brand img {
-        height: 40px;
-        margin-top: -10px; 
+    .navbar-brand {
+        height: 60px;
+        padding: 20px 20px;
     }
+    
+        .navbar-white .navbar-brand {
+            color: #333333;
+        }
+    
+        .navbar-brand img {
+            height: 40px;
+            margin-top: -10px; 
+        }
+        .navbar-white .navbar-brand:hover,
+        .navbar-white .navbar-brand:focus {
+            color: #666666;
+        }
+
+    .navbar-white {
+        background-color: #ffffff;
+        border-color: #eeeeee;
+    }
+    
+        .navbar-white .navbar-text {
+            color: #333333;
+        }
+        
+        .navbar-white .navbar-nav > li > a {
+            color: #333333;
+        }
+        .navbar-white .navbar-nav > li > a:hover,
+        .navbar-white .navbar-nav > li > a:focus {
+            color: #666666;
+        }
+        .navbar-white .navbar-nav > .active > a,
+        .navbar-white .navbar-nav > .active > a:hover,
+        .navbar-white .navbar-nav > .active > a:focus {
+            color: #666666;
+            background-color: #eeeeee;
+        }
+        .navbar-white .navbar-nav > .open > a,
+        .navbar-white .navbar-nav > .open > a:hover,
+        .navbar-white .navbar-nav > .open > a:focus {
+            color: #666666;
+            background-color: #eeeeee;
+        }
+        .navbar-white .navbar-toggle {
+            border-color: #eeeeee;
+        }
+        .navbar-white .navbar-toggle:hover,
+        .navbar-white .navbar-toggle:focus {
+            background-color: #eeeeee;
+        }
+        .navbar-white .navbar-toggle .icon-bar {
+            background-color: #333333;
+        }
+        .navbar-white .navbar-collapse,
+        .navbar-white .navbar-form {
+            border-color: #333333;
+        }
+        .navbar-white .navbar-link {
+            color: #333333;
+        }
+        .navbar-white .navbar-link:hover {
+            color: #666666;
+        }
+
+@media (max-width: 767px) {
+    .navbar-white .navbar-nav .open .dropdown-menu > li > a {
+        color: #333333;
+    }
+    .navbar-white .navbar-nav .open .dropdown-menu > li > a:hover,
+    .navbar-white .navbar-nav .open .dropdown-menu > li > a:focus {
+        color: #666666;
+    }
+    .navbar-white .navbar-nav .open .dropdown-menu > .active > a,
+    .navbar-white .navbar-nav .open .dropdown-menu > .active > a:hover,
+    .navbar-white .navbar-nav .open .dropdown-menu > .active > a:focus {
+        color: #666666;
+        background-color: #eeeeee;
+    }
+}
