feat(Exe08): implementado mais funções do exercicio

--- a/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe08/spring-crescer-web/src/main/resources/templates/index.html
+++ b/src/modulo-08-java/exercicios/modulo-08-java-exercicios/Exe08/spring-crescer-web/src/main/resources/templates/index.html
@@ -5,5 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     </head>
     <body> 
+        <div layout:fragment="content">
+            <div class="default-background">
+                <h1>Este é o meu conteudo!</h1>
+            </div>
+        </div>
     </body>
 </html>
